# Clarity

./: .gitignore  README.md  package-lock.json
backend/: Dockerfile  Makefile  api.key.example  feed_reader.py  generate_article.py  logo_service.py  main.py  openapi.json  pyproject.toml  research.py  topics.json  topics.py
backend/internal/: admin.py
backend/json/: article_images.json  articles.json  enhanced_topics.json  feed_hash.txt  final_topic.json  final_topics.json  generated_text.json  topics.json
backend/models/: articles.py  facts.py  images.py  topics.py
backend/routers/: content.py  media.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/pages/fiestPage/: FactBatch.jsx  FactSelectionCard.jsx  FirstPage.jsx  MediaBatch.jsx  MediaSelectionCard.jsx  SelectSourcesCard.jsx  SourceBatch.jsx
frontend/src/components/pages/secondPage/: SecondPage.jsx
frontend/src/components/pages/secondPage/artical/: ArticalComponentFactory.jsx  ArticalEditColumn.jsx  BigCompunent.jsx
frontend/src/components/pages/secondPage/artical/components/: ArticalHeadline.jsx  ArticalImage.jsx  ArticalText.jsx
frontend/src/components/pages/shared/: NavBar.jsx
frontend/src/components/pages/thirdPage/: PodcarsCard.jsx  PodcastSceletion.jsx  ThirdPage.jsx  TickTockCard.jsx  TwitterCard.jsx  TwitterSceletion.jsx
frontend/src/components/pages/topickOverView/: TopickOverViewPage.jsx
frontend/src/components/ui/: badge.tsx  card.tsx  custom-card.tsx  dropdown-menu.tsx
